# slide-scroller

./: .gitignore  pyproject.toml
examples/: dashboard_fourier_tables.json  dashboard_reset.json
src/: cli.py  main.py
src/infrastructure/: config.py  signals.py
src/presentation/: main_window.py
src/presentation/components/: latex_renderer.py  rough_box.py  rough_pill.py  sliding_stacked_widget.py
src/presentation/slides/: __init__.py  chart_slide.py  deadline_slide.py  text_slide.py  web_slide.py
