[project]
name = "slide-scroller"
version = "0.1.0"
description = "A 3D bar chart slide scroller with PyQt6"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyqt6>=6.6.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "PyQt6-WebEngine>=6.6.0",
    "pyqt6-qt6>=6.10.1",
    "pyqt6-sip>=13.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
